fixed color of suggestion box

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
     
     <footer>
       <!-- Main Footer -->
-      <section class="section background-light">
+      <section class="section background-">
        
         <div class="line">
           <div class="margin">
@@ -168,7 +168,7 @@
             <!-- Collumn 3 -->
             <div class="s-12 m-12 l-4">
               <h4 class="text-uppercase text-strong">suggestions for the app?</h4>
-              <form class="customform text-white" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
+              <form class="customform text-dark" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
                 <div class="line">
                   <div class="margin">
                     <div class="s-12 m-12 l-6">
@@ -200,12 +200,12 @@
           <div class="s-12 l-6">
             <a class="right text-size-12" >Copyright Verda.ca 2018</a>
             <a href="https://www.facebook.com/verdacompany/"><i class="icon-facebook_circle icon2x text-white"></i></a> 
-            <a href="https://twitter.com/verdacompany"><i class="icon-twitter_circle icon2x text-white"></i></a>
-            <a href="https://www.instagram.com/verdacompany/"><i class="icon-instagram_circle icon2x text-white"></i></a>
+               <a href="https://twitter.com/verdacompany"><i class="icon-twitter_circle icon2x text-white"></i></a>
+               <a href="https://www.instagram.com/verdacompany/"><i class="icon-instagram_circle icon2x text-white"></i></a>
           </div>
         </div>
       </section>
-    </footer> 
+    </footer>
     <script type="text/javascript" src="js/responsee.js"></script>
     <script type="text/javascript" src="owl-carousel/owl.carousel.js"></script>
     <script type="text/javascript" src="js/template-scripts.js"></script>
