--- a/giveaway.html
+++ b/giveaway.html
@@ -68,7 +68,7 @@
     </main>
     
  <!--FOOTER -->
-    <footer>
+     <footer>
       <!-- Main Footer -->
       <section class="section background-">
        
@@ -108,7 +108,7 @@
             <!-- Collumn 3 -->
             <div class="s-12 m-12 l-4">
               <h4 class="text-uppercase text-strong">suggestions for the app?</h4>
-              <form class="customform text-white" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
+              <form class="customform text-dark" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
                 <div class="line">
                   <div class="margin">
                     <div class="s-12 m-12 l-6">
