--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                   <p>
                   Fill out the form below to let us know where to bring verda next, and to be one of the first to have the latest updates on Verda.
                   </p>
-                   <form class="customform text-white" action='https://www.getform.org/f/abcbb653-be65-4155-b2fb-550a5ff9651b' method="POST">
+                   <form class="customform text-dark" action='https://www.getform.org/f/abcbb653-be65-4155-b2fb-550a5ff9651b' method="POST">
                 <div class="line">
                   <div class="margin">
                     <div class="s-12 m-12 l-6">
@@ -100,9 +100,9 @@
     </main>
     
     <!--FOOTER -->
-    <footer>
+        <footer>
       <!-- Main Footer -->
-      <section class="section background-light">
+      <section class="section background-">
        
         <div class="line">
           <div class="margin">
@@ -140,7 +140,7 @@
             <!-- Collumn 3 -->
             <div class="s-12 m-12 l-4">
               <h4 class="text-uppercase text-strong">suggestions for the app?</h4>
-              <form class="customform text-white" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
+              <form class="customform text-dark" action='https://www.getform.org/f/4f2c2640-272d-4721-8e11-51630d9378b3' method="POST">
                 <div class="line">
                   <div class="margin">
                     <div class="s-12 m-12 l-6">
